# server/gen/proto/core/common/v1/resources/base_response.pb.go
@@ -22,7 +22,7 @@ const (
 	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
 )
 
-type BaseResponse struct {
+type SuccessResponse struct {
 	state         protoimpl.MessageState `protogen:"open.v1"`
 	Metadata      *MetadataReponse       `protobuf:"bytes,1,opt,name=metadata,proto3" json:"metadata,omitempty"`
 	Data          *anypb.Any             `protobuf:"bytes,2,opt,name=data,proto3" json:"data,omitempty"`
@@ -30,20 +30,20 @@ type BaseResponse struct {
 	sizeCache     protoimpl.SizeCache
 }
 
-func (x *BaseResponse) Reset() {
-	*x = BaseResponse{}
+func (x *SuccessResponse) Reset() {
+	*x = SuccessResponse{}
 	mi := &file_core_common_v1_resources_base_response_proto_msgTypes[0]
 	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 	ms.StoreMessageInfo(mi)
 }
 
-func (x *BaseResponse) String() string {
+func (x *SuccessResponse) String() string {
 	return protoimpl.X.MessageStringOf(x)
 }
 
-func (*BaseResponse) ProtoMessage() {}
+func (*SuccessResponse) ProtoMessage() {}
 
-func (x *BaseResponse) ProtoReflect() protoreflect.Message {
+func (x *SuccessResponse) ProtoReflect() protoreflect.Message {
 	mi := &file_core_common_v1_resources_base_response_proto_msgTypes[0]
 	if x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
@@ -55,19 +55,19 @@ func (x *BaseResponse) ProtoReflect() protoreflect.Message {
 	return mi.MessageOf(x)
 }
 
-// Deprecated: Use BaseResponse.ProtoReflect.Descriptor instead.
-func (*BaseResponse) Descriptor() ([]byte, []int) {
+// Deprecated: Use SuccessResponse.ProtoReflect.Descriptor instead.
+func (*SuccessResponse) Descriptor() ([]byte, []int) {
 	return file_core_common_v1_resources_base_response_proto_rawDescGZIP(), []int{0}
 }
 
-func (x *BaseResponse) GetMetadata() *MetadataReponse {
+func (x *SuccessResponse) GetMetadata() *MetadataReponse {
 	if x != nil {
 		return x.Metadata
 	}
 	return nil
 }
 
-func (x *BaseResponse) GetData() *anypb.Any {
+func (x *SuccessResponse) GetData() *anypb.Any {
 	if x != nil {
 		return x.Data
 	}
@@ -166,8 +166,8 @@ var File_core_common_v1_resources_base_response_proto protoreflect.FileDescripto
 
 const file_core_common_v1_resources_base_response_proto_rawDesc = "" +
 	"\n" +
-	",core/common/v1/resources/base_response.proto\x12\tcommon.v1\x1a\x19google/protobuf/any.proto\x1a'core/common/v1/resources/metadata.proto\x1a,core/common/v1/resources/mutate_result.proto\x1a*core/common/v1/resources/view_result.proto\"p\n" +
-	"\fBaseResponse\x126\n" +
+	",core/common/v1/resources/base_response.proto\x12\tcommon.v1\x1a\x19google/protobuf/any.proto\x1a'core/common/v1/resources/metadata.proto\x1a,core/common/v1/resources/mutate_result.proto\x1a*core/common/v1/resources/view_result.proto\"s\n" +
+	"\x0fSuccessResponse\x126\n" +
 	"\bmetadata\x18\x01 \x01(\v2\x1a.common.v1.MetadataReponseR\bmetadata\x12(\n" +
 	"\x04data\x18\x02 \x01(\v2\x14.google.protobuf.AnyR\x04data\"P\n" +
 	"\x0eMutateResponse\x12>\n" +
@@ -189,7 +189,7 @@ func file_core_common_v1_resources_base_response_proto_rawDescGZIP() []byte {
 
 var file_core_common_v1_resources_base_response_proto_msgTypes = make([]protoimpl.MessageInfo, 3)
 var file_core_common_v1_resources_base_response_proto_goTypes = []any{
-	(*BaseResponse)(nil),    // 0: common.v1.BaseResponse
+	(*SuccessResponse)(nil), // 0: common.v1.SuccessResponse
 	(*MutateResponse)(nil),  // 1: common.v1.MutateResponse
 	(*ViewResponse)(nil),    // 2: common.v1.ViewResponse
 	(*MetadataReponse)(nil), // 3: common.v1.MetadataReponse
@@ -198,8 +198,8 @@ var file_core_common_v1_resources_base_response_proto_goTypes = []any{
 	(*ViewResult)(nil),      // 6: common.v1.ViewResult
 }
 var file_core_common_v1_resources_base_response_proto_depIdxs = []int32{
-	3, // 0: common.v1.BaseResponse.metadata:type_name -> common.v1.MetadataReponse
-	4, // 1: common.v1.BaseResponse.data:type_name -> google.protobuf.Any
+	3, // 0: common.v1.SuccessResponse.metadata:type_name -> common.v1.MetadataReponse
+	4, // 1: common.v1.SuccessResponse.data:type_name -> google.protobuf.Any
 	5, // 2: common.v1.MutateResponse.mutate_results:type_name -> common.v1.MutateResult
 	6, // 3: common.v1.ViewResponse.view_results:type_name -> common.v1.ViewResult
 	4, // [4:4] is the sub-list for method output_type
